# vitswin.cpp

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
models/: ConvModel.cpp  ConvModel.h  Maia.h  Transformer.cpp  Transformer.h
